# outlier_causality

./: README.md  environment.yml
bases/: README.md
bases/EasyRCA/: setup.py
data_gen/: .coverage  .coveragerc  README.md  pyproject.toml
data_gen/.ipynb_checkpoints/: rca_microservice-checkpoint.ipynb  syn1-checkpoint.ipynb
data_gen/notebooks/: data1.ipynb  data2.ipynb  inject_outliers.ipynb  inlier.csv  simple.ipynb  simple.py  simple_2.ipynb  (+3 more)
detector/: .coverage  .coveragerc  pyproject.toml
experiments/: run.sh
metrics/: .coverage  .coveragerc  README.md  pyproject.toml
metrics/src/rc_metrics/: accuracy.py  performance.py  performance_multilabel.py
metrics/src/rc_metrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
metrics/tests/: data.csv  result.json  result2.json  result3.json  test_accuracy.py  test_performance.py
ocular/: .coverage  .coveragerc  README.md  pyproject.toml
simulator_cloudranger/: .coveragerc  README.md  pyproject.toml
simulator_cloudranger/src/cloudranger_simulator/: evaluator.py  explanation.py  main_mp.py  stream_mp.py  timeseries.py
simulator_cloudranger/src/cloudranger_simulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simulator_cloudranger/tests/: test_detector.py  test_explanation.py  test_stream_mp.py  test_timeseries.py
simulator_dycause/: .coverage  .coveragerc  README.md  pyproject.toml
simulator_easyrca/: .coverage  .coveragerc  README.md  pyproject.toml
simulator_gcm/: .coverage  .coveragerc  README.md  pyproject.toml
simulator_ocular/: .coverage  .coveragerc  README.md  pyproject.toml
(+2248 files in other folders)
