[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rc_metrics"
version = "0.0.1"
authors = [
  { name="Egawati Panjei", email="egawati.panjei@ou.edu" },
]
description = "Performance metrics of outlier causal in data stream"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/egawati/"
"Bug Tracker" = "https://github.com/egawati/"