[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "cloudranger_simulator"
version = "0.0.1"
authors = [
  { name="Egawati Panjei", email="egawati.panjei@ou.edu" },
]
description = "Data streams simulator for outlier explanation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/egawati/"
"Bug Tracker" = "https://github.com/egawati/"